# ImagetoCode_AGENT

./: .gitignore  CHANGELOG.md  DESIGN_DOCUMENT.md  ImageChat.py  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  VisualJudgement.py  WEB_SERVICE.md  agent1_code_generation.py  agent2_visual_judgment.py  agent3_code_evaluation.py  agent4_feedback_revision.py  agent_pipeline.py  agents.py  dashscope_api.py  echarts_render.py  financial_blockchain_pie.html  main.py  multidim_validator.py  package-lock.json  pyproject.toml  requirements.txt  start_server.bat  start_server.sh  web_app.py  关于沟槽的经常出网络问题的Git.md  图片复现.py  我的API.txt  执行步骤.md  更新日志以及技术文档.md  项目框架.md  项目框架.txt
Agents/: agent1_code_generation.py  agent2_visual_judgment.py  agent3_code_evaluation.py  agent4_feedback_revision.py  agent_pipeline.py  agent_pipeline_echarts.py
Authenticator/: __init__.py  color_consistency_validator.py  multidim_validator.py  structural_consistency_validator.py  text_consistency_validator.py
backend/: config.py  main.py  requirements.txt
backend/api/: download.py  history.py  (+3 more)
docs/: API.md  API_REFERENCE.md  DEPLOYMENT.md  DEVELOPMENT.md
experiments/: main.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
logs/: .gitignore
outputs/: current_echarts_after_agent4_r1.js  preview.html  report_agent2_round1.txt  report_agent2_round2.txt  report_agent3_round1.txt  validator_round1.txt
scripts/: __init__.py  cli.py  restart_service.py  start_service.py
templates/: index.html
utils/: dashscope_api.py  echarts_render.py  matplotlib_render.py
(+86 files in other folders)
